# CarePath-Analytics

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: breast-cancer-dataset-analysis.Rmd
notebooks/New folder/: Foundations of Causal inference. .ipynb
scripts/: __init__.py
