[project]
name = "causality"
version = "0.1.0"
description = "Breast cancer healthcare analytics dashboard with ML, SHAP explainability, and clinical risk scoring"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit>=1.25.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "shap>=0.42.0",
    "plotly>=5.0.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "joblib>=1.3.0"
]